#1 index.html [EDITED] -- div Introduction added --> form created #2 css/style.css[EDITED] -- .introduction > #form styled complete #3 css/template.css[EDITED] -- correct the z-index problem

--- a/css/header.css
+++ b/css/header.css
@@ -47,7 +47,7 @@ label {
      height: inherit;
      width: inherit;
      border-radius: 1.5px;
-     background-color: #181c3f;
+     background-color: #f00e92; /*todo to change!!!*/
      }
      #menu-toggler::before {
      top: -9px;
@@ -87,7 +87,8 @@ label {
      pointer-events: none;
      height: 0px;
 
-     background: rgba(0, 0, 0, 0.2);
+     background: rgba(0, 0, 0, .7);
+     background: ;
 
      -webkit-transition: opacity 1s ease;
      -moz-transition: opacity 1s ease;
@@ -117,6 +118,8 @@ label {
      opacity: 1;
      pointer-events: auto;
      height: 90vh;
+
+     z-index: 99;
 }
 
 /***working on the menu-items inside***/
@@ -148,6 +151,8 @@ li a{
      z-index: 100;
 
      transition: all .5s ease;
+     color: var(--color-white);
+
 
 }
 
@@ -172,7 +177,7 @@ li a::after{
 
 li a:hover::after{
      height: 100%;
-     min-width: 50%; /*todo remove it if you don't like*/
+     min-width: 60%; /*todo remove it if you don't like*/
 
      background-color: var(--color-accent-primary);
 }
@@ -213,6 +218,8 @@ button.signin{
      height: 50px;
      width: 50px;
      border-radius: 50%;
+     color: var(--color-primary);
+     color: var(--color-white);
 
      /* background-color: var(--color-white); */
 }
@@ -293,6 +300,12 @@ button.signin{
           min-width: 0;
           padding: 1rem 0;
      }
+     #nav-bar li a{
+          color: var(--color-primary);
+     }
+     #nav-bar li a:hover{
+          color: var(--color-white);
+     }
 
      #nav-bar button.sign{
           min-width: 0;
@@ -305,3 +318,6 @@ button.signin{
           border-bottom: 1px solid var(--color-accent-secondary);
      }
 }
+
+
+/*todo : a on click -- wrinkle -- */
